# Postbox

./: CMakeLists.txt  README.md  resources.qrc
Design Files/: Postbox.af
qml/: Main.qml  SIdebar.qml  Theme.qml
qml/Themes/: ThemeDark.qml  ThemeLight.qml
src/: main.cpp
